# pysemdist_local

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/zbronze/: city_petitions.csv  city_petitions_20260107.csv  dm_petitions.csv  eric_adams_20251016.csv  petitions.csv  topic_petitions.csv
scripts/: run_pipeline.py
src/pysemdist/: __init__.py  config.py  io_utils.py  label.py
