[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pysemdist"
version = "0.2.0"
description = "Local text embedding, clustering, and LLM summarization utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Team" }]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.38",
    "keybert>=0.8.0",
    "langdetect>=1.0.9",
    "tqdm>=4.66.0",
    "pyarrow>=15.0.0",
    "httpx>=0.27.0",
]


[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6.0", "mypy>=1.8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/pysemdist"]

[tool.ruff]
line-length = 100
target-version = "py310"
